10/8/08 - moved list of rejected features to Unfuddle 805
9/5/08 - remove uses of DialogUtils, use JOptionPane directly
6/24/08 - move SphericalNode to piccolo-phet
> improve fonts
5/20/08 - replace Font with PhetFont
# 2.01.00 (21029)
4/28/08 - add PhetLookAndFeel to main
4/28/08 - pick up fix to PhetDefaultFont so that preferred fonts are derived properly
4/28/08 - pick up change to PhetDefaultFont so that default font is "Lucida Sans" plain 12pt on all platforms
4/28/08 - redeploy production version to fix translations (Unfuddle #141)
# 2.00.01 (20988)
4/28/08 - publish dev version to test translations (Unfuddle #141)
4/4/08 - remove clock icon from OTClockControlPanel, animated icon was added to phetcommon
1/4/08 - delete OTLauncher, obsolete
# 2.00.00 (18753)
11/14/07 - organize imports
11/9/07 - move about.credits property to localization file
# 1.00.16 (18421)
10/31/07 - update screenshots, create screenshots for new flavors
10/31/07 - use constant stall force strategy, 6pN for EnzymeA, 7pN for EnzymeB
10/30/07 - flavorize:"Optical Tweezers and Applications", "Stretching DNA", "Molecular Motors"
10/25/07 - make DNAForceVector an observer of Fluid, so that stall force vector is updated when ATP changes
10/25/07 - add IStallForceStrategy, implement "constant" and "lookup table" strategies for mapping ATP to stall force
10/25/07 - delete IDNASpeedStrategy.getForce, we won't use this approach for stall force
10/17/07 - add test case for consistency of getSpeed and getForce in Tom's DNASpeedStrategy
10/17/07 - convert Tom & Kathy's DNASpeedStrategy implementation to top-level types
10/10/07 - improved performance of frame resize, fixed problem in PhetPCanvas.updateLayout strategy
10/10/07 - remove calls to PhetApplication.instance().getPhetFrame, add parentFrame arg to constructors that need it
10/10/07 - remove stuff from OTAbstractModule that was moved to phetcommon's Module
10/10/07 - all overrides of PhetPCanvas.updateLayout must call super.updateLayout